examples/ctypes/bridge/bridge.h

typedef struct {
    char* format;
    char* text;
} ResultInfo;
typedef struct {
    int size;
    ResultInfo** pResultInfo;
} ResultList;
typedef int (*callback_t)(ResultList*);
EXPORT_API void dbr_free_results(ResultList* resultList);
EXPORT_API void thread_decode(void* barcodeReader, const char *fileName);
EXPORT_API int registerCallback(callback_t foo);