src/DynamsoftBarcodeReader.h

	/**
	* @defgroup CFunctions C Functions
	* @{
	*   
	* Four methods are now supported for editing runtime settings - reset, initialize, append, update. 
	* - Reset runtime settings: reset all parameters in runtime setting to default value.     
	*  
	* - Initialize with template: reset runtime settings firstly and replace all parameters in runtime setting with the values specified in given template regardless of the current runtime settings.   
	*  
	* - Append template to runtime settings: append template and update runtime settings; the conflicting values will be assigned by the rules shown in PublicRuntimeSettings.    
	*
	* - Update with struct: update current runtime settings by the values specified in given struct directly; the parameter not be defined in struct will remain its original value.   
	* 
	* @par References
	* More information about public parameters and template file can be found in file DBR_Developer's_Guide.pdf.
	*
	* 
	* @sa PublicRuntimeSettings
	* @defgroup BasicFunciton Basic Functions
	* @{
	*   Basic APIs used for running Dynamsoft Barcode Reader. 
	*/


	/**
	 * Creates an instance of Dynamsoft Barcode Reader.
	 * 
	 * @return Returns an instance of Dynamsoft Barcode Reader. If failed, return NULL.
	 *
	 * @par Remarks:
	 *		The decoding result maybe unreliable without loading license key.
	 *
	 * @par Code Snippet:
	 * @code
			void* hBarcodeReader = DBR_CreateInstance();
			DBR_InitLicense(hBarcodeReader, "t0260NwAAAHV***************");
			DBR_DestroyInstance(hBarcodeReader);
	 * @endcode
	 */
	DBR_API void*  DBR_CreateInstance();
	/**
	 * Destroys an instance of Dynamsoft Barcode Reader.
	 * 
	 * @param [in] hBarcodeReader Handle of the barcode reader instance.
	 *
	 * @par Code Snippet:
	 * @code
			void* hBarcodeReader = DBR_CreateInstance();
			DBR_InitLicense(hBarcodeReader, "t0260NwAAAHV***************");
			DBR_DestroyInstance(hBarcodeReader);
	 * @endcode
	 */
	DBR_API void DBR_DestroyInstance(void*  hBarcodeReader);
	/**
	 * Reads license key and activate the SDK.
	 * 
	 * @param [in] hBarcodeReader Handle of the barcode reader instance.
	 * @param [in] pszLicense The license keys.
	 * 			   
	 * @return Returns error code. Returns 0 if the function completed successfully, otherwise call 
	 * 		   DBR_GetErrorString to get detail message.
	 *
	 * @par Code Snippet:
	 * @code
			void* hBarcodeReader = DBR_CreateInstance();
			DBR_InitLicense(hBarcodeReader, "t0260NwAAAHV***************");
			DBR_DestroyInstance(hBarcodeReader);
	 * @endcode
	 */
	DBR_API int  DBR_InitLicense(void*  hBarcodeReader, const char* pszLicense);